--- a/frontend/web/package.json
+++ b/frontend/web/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@apollo/client": "^3.5.10",
 		"@panelbear/panelbear-nextjs": "^1.0.4",
+		"datebook": "^7.0.8",
 		"graphql": "^16.3.0",
 		"moment": "^2.29.1",
 		"next": "12.1.4",
