--- a/backend/package.json
+++ b/backend/package.json
@@ -6,23 +6,32 @@
 	"private": true,
 	"devDependencies": {
 		"@types/axios": "^0.14.0",
+		"@types/express-session": "^1.17.7",
+		"@types/uuid": "^9.0.1",
 		"ts-node": "^10.7.0",
 		"ts-node-dev": "^1.1.8",
 		"typescript": "^4.6.3"
 	},
 	"dependencies": {
 		"apollo-server-express": "^2",
+		"argon2": "^0.30.3",
 		"axios": "^0.26.1",
 		"cheerio": "^1.0.0-rc.10",
-		"class-validator": "^0.13.2",
+		"class-validator": "^0.14.0",
+		"connect-redis": "^7.0.1",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
+		"express-session": "^1.17.3",
 		"graphql": "^15.3.0",
+		"ioredis": "^5.3.1",
 		"moment": "^2.29.1",
 		"moment-timezone": "^0.5.41",
+		"pg": "^8.10.0",
 		"reflect-metadata": "^0.1.13",
-		"type-graphql": "^1.1.1"
+		"type-graphql": "^1.1.1",
+		"typeorm": "^0.3.12",
+		"uuid": "^9.0.0"
 	},
 	"scripts": {
 		"start": "ts-node src/index.ts",
