--- a/frontend/web/package.json
+++ b/frontend/web/package.json
@@ -13,6 +13,7 @@
 		"@apollo/client": "^3.5.10",
 		"@panelbear/panelbear-nextjs": "^1.0.4",
 		"datebook": "^7.0.8",
+		"formik": "^2.2.9",
 		"graphql": "^16.3.0",
 		"moment": "^2.29.1",
 		"next": "12.1.4",
